tests/grammar/snapshots/r#mod__grammar__alpha034__parentheses-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"(\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Parentheses(
                                    (
                                        Error,
                                        0..1,
                                    ),
                                ),
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ),
                0..1,
            ),
        ],
    ),
    [
        found end of input at 0..1 expected "expression",
        found end of input at 0..1 expected '")"',
    ],
)
