tests/grammar/snapshots/r#mod__grammar__alpha034__parentheses-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"(1\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Parentheses(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                1..2,
                                            ),
                                        ),
                                        1..2,
                                    ),
                                ),
                                0..2,
                            ),
                        ),
                        0..2,
                    ),
                ),
                0..2,
            ),
        ],
    ),
    [
        found end of input at 0..2 expected '"."', '";"', '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '")"',
    ],
)
