tests/grammar/snapshots/r#mod__grammar__alpha034__parentheses-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"(1,)\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Parentheses(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                1..2,
                                            ),
                                        ),
                                        1..2,
                                    ),
                                ),
                                0..4,
                            ),
                        ),
                        0..4,
                    ),
                ),
                0..4,
            ),
        ],
    ),
    [
        Simple {
            span: 2..3,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ")",
                    ),
                ),
            },
            found: Some(
                Token(
                    ",",
                ),
            ),
            label: None,
        },
    ],
)
