tests/grammar/snapshots/r#mod__grammar__alpha034__parentheses.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"()\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Parentheses(
                                    (
                                        Error,
                                        1..2,
                                    ),
                                ),
                                0..2,
                            ),
                        ),
                        0..2,
                    ),
                ),
                0..2,
            ),
        ],
    ),
    [
        Simple {
            span: 1..2,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "true",
                    ),
                ),
                Some(
                    Token(
                        "\"",
                    ),
                ),
                Some(
                    Token(
                        "not",
                    ),
                ),
                Some(
                    Token(
                        "(",
                    ),
                ),
                Some(
                    Token(
                        "false",
                    ),
                ),
                Some(
                    Token(
                        "nameof",
                    ),
                ),
                Some(
                    Token(
                        "[",
                    ),
                ),
                Some(
                    Token(
                        "status",
                    ),
                ),
                Some(
                    Token(
                        "$",
                    ),
                ),
                Some(
                    Token(
                        "-",
                    ),
                ),
                Some(
                    Token(
                        "null",
                    ),
                ),
            },
            found: Some(
                Token(
                    ")",
                ),
            ),
            label: None,
        },
        Simple {
            span: 2..3,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ")",
                    ),
                ),
            },
            found: None,
            label: None,
        },
    ],
)
