tests/grammar/snapshots/r#mod__grammar__alpha034__range-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1..=2\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Range(
                        Number(
                            1.0,
                        ),
                        (),
                        Some(
                            (),
                        ),
                        Number(
                            2.0,
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
