tests/grammar/snapshots/r#mod__grammar__alpha034__range-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1..2..3\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Range(
                        Range(
                            Number(
                                1.0,
                            ),
                            (),
                            None,
                            Number(
                                2.0,
                            ),
                        ),
                        (),
                        None,
                        Number(
                            3.0,
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
