tests/grammar/snapshots/r#mod__grammar__alpha034__range-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"1..=\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Range(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                0..1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                    (
                                        Error,
                                        0..4,
                                    ),
                                ),
                                0..4,
                            ),
                        ),
                        0..4,
                    ),
                ),
                0..4,
            ),
        ],
    ),
    [
        found end of input at 0..4 expected '"-"', '"not"', '"nameof"', '"true"', '"false"', '"null"', '"status"', '"\""', '"["', '"$"', or '"("',
    ],
)
