tests/grammar/snapshots/r#mod__grammar__alpha034__recovery-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(r#\"\n        fun foo(a) {\n\n            return \"echo \\\"{5 + 5}\\\"\";\n        }\n\n        unsafe {\n    \"#))"
---
(
    Some(
        [
            (
                FunctionDefinition(
                    (
                        false,
                        9..12,
                    ),
                    (
                        "fun",
                        9..12,
                    ),
                    (
                        "foo",
                        13..16,
                    ),
                    [
                        (
                            Generic(
                                (
                                    "a",
                                    17..18,
                                ),
                            ),
                            17..18,
                        ),
                    ],
                    None,
                    [
                        (
                            Return(
                                Some(
                                    (
                                        Text(
                                            [
                                                (
                                                    Text(
                                                        (
                                                            "echo",
                                                            43..47,
                                                        ),
                                                    ),
                                                    43..47,
                                                ),
                                                (
                                                    Escape(
                                                        (
                                                            "\"",
                                                            48..50,
                                                        ),
                                                    ),
                                                    48..50,
                                                ),
                                                (
                                                    Expression(
                                                        (
                                                            Add(
                                                                (
                                                                    Number(
                                                                        (
                                                                            5.0,
                                                                            51..52,
                                                                        ),
                                                                    ),
                                                                    51..52,
                                                                ),
                                                                (
                                                                    Number(
                                                                        (
                                                                            5.0,
                                                                            55..56,
                                                                        ),
                                                                    ),
                                                                    55..56,
                                                                ),
                                                            ),
                                                            51..56,
                                                        ),
                                                    ),
                                                    50..57,
                                                ),
                                                (
                                                    Escape(
                                                        (
                                                            "\"",
                                                            57..59,
                                                        ),
                                                    ),
                                                    57..59,
                                                ),
                                            ],
                                        ),
                                        42..60,
                                    ),
                                ),
                            ),
                            35..61,
                        ),
                    ],
                ),
                9..71,
            ),
            (
                Statement(
                    (
                        CommandModifier(
                            (
                                Unsafe,
                                81..87,
                            ),
                        ),
                        81..87,
                    ),
                ),
                81..87,
            ),
            (
                Statement(
                    (
                        Block(
                            (
                                Block(
                                    [],
                                ),
                                88..89,
                            ),
                        ),
                        88..89,
                    ),
                ),
                88..89,
            ),
        ],
    ),
    [
        found end of input at 88..89 expected "statement", or '"}"',
    ],
)
